# macos-log-dfir

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
rules/hayabusa/macos/builtin/: airdrop_transfer_outbound.yml  application_firewall_logging.yml  configuration_profile_manual_install.yml  configuration_profile_manual_removal.yml  gatekeeper_file_access_rejections_and_user_bypasses.yml  gatekeeper_file_access_scan_activity.yml  local_user_password_change_failure.yml  local_user_password_change_success.yml  lock_screen_unlock_failure.yml  login_through_login_window_with_apple_watch_success.yml  login_through_login_window_with_password_failure.yml  login_through_login_window_with_password_success.yml  login_through_login_window_with_touch_id_failure.yml  login_through_login_window_with_touch_id_success.yml  mdm_profile_manual_removal.yml  modifications_dns_settings.yml  network_server_connection_attempts_outbound.yml  root_user_enabled_or_password_changed.yml  screen_sharing_connectons_inbound.yml  sudo_access_failed_incorrect_password.yml  xprotect_remediator_scan_activity.yml
rules/hayabusa/macos/jamf/: airdrop_transfer_outbound.yml  application_firewall_logging.yml  configuration_profile_manual_install.yml  configuration_profile_manual_removal.yml  gatekeeper_file_access_rejections_and_user_bypasses.yml  gatekeeper_file_access_scan_activity.yml  local_user_password_change_failure.yml  (+14 more)
src/: args.rs  detection.rs  filter.rs  main.rs  output.rs  parser.rs  rulenode.rs  yml.rs
src/rule/: condition_parser.rs  matchers.rs  rulenode.rs  selectionnodes.rs
