[package]
name = "macos-log-dfir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macos-unifiedlogs = {git = "https://github.com/mandiant/macos-UnifiedLogs"}
clap = { version = "4.*", features = ["derive"]}
csv = "1.*"
chrono = "0.4.*"
mimalloc = { version = "*", default-features = false }
libmimalloc-sys = { version = "*",  features = ["extended"] }