[package]
name = "macos-log-dfir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macos-unifiedlogs = {git = "https://github.com/mandiant/macos-UnifiedLogs"}
clap = { version = "4.*", features = ["derive"]}
csv = "1.*"
chrono = "0.4.*"
mimalloc = { version = "*", default-features = false }
libmimalloc-sys = { version = "*",  features = ["extended"] }
hashbrown = "0.14.*"
itertools = "*"
serde_json = { version = "1.0"}
downcast-rs = "1.*"
lazy_static = "1.4.*"
regex = "1"
nested="*"
yaml-rust = "0.4.*"
cidr-utils = "0.*"
base64 = "*"
aho-corasick = "*"
memchr = "2.*"